<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral10"
    android:paddingStart="35dp"
    android:paddingEnd="35dp"
    android:orientation="vertical"

    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"><LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_company_text"
            >
        </ImageView>
        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            >

        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="78dp"
            android:layout_marginTop="-10dp"
            android:textSize="30sp"
            >

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email_text"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="normal"

            >

        </TextView>
    <!--suppress AndroidSpeakableTextPresent -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_ed_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:hint="@string/content_text_description1"
            android:maxLength="50"
            android:maxLines="1"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck">

        </com.google.android.material.textfield.TextInputEditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:hint="@string/hint_text"
            >

        </TextView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_ed_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:hint="@string/content_text_description2"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1"
            android:minHeight="48dp"
            android:singleLine="true"

            android:textColor="@color/white"

            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck">

        </com.google.android.material.textfield.TextInputEditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="normal"
            >

        </TextView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_ed_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:hint="@string/content_text_description3"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="#546E7A"
            android:textStyle="bold">

        </com.google.android.material.textfield.TextInputEditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </View>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </View>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </View>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="RegisterUser">

        </Button>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyhaveanaccount_text"
                android:textColor="@color/white"
                >

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:textColor="@color/white"
                android:onClick="gotoLogin"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>



    </LinearLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/design_default_color_primary_dark"
            android:visibility="gone"
            android:id="@+id/progressBarRegister">

        </ProgressBar>

    </RelativeLayout>



</LinearLayout>